[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/map/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/models/server/server.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/level/PlayerSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/computer/Computer.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/demo/FinalLevel.gd" type="Script" id=5]
[ext_resource path="res://levels/demo/lightmap/lightmap.lmbake" type="BakedLightmapData" id=6]
[ext_resource path="res://levels/demo/CentralSystem.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/demo/info.tres" type="Resource" id=8]

[node name="FinalLevel" type="Spatial"]
script = ExtResource( 5 )
level_info = ExtResource( 8 )
map = NodePath("Map")
spawner = NodePath("PlayerSpawner")

[node name="CentralSystem" parent="." instance=ExtResource( 7 )]

[node name="Computer" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.585246, 0.5, -3.5 )
display_name = "Central Computer"
description = "Use it to reboot the central system"
interaction_message = "Use"
active = false

[node name="PlayerSpawner" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 2, 6.5 )

[node name="Map" parent="." instance=ExtResource( 1 )]
data = {
"cells": PoolIntArray( 0, 0, 538312708, 2, 0, 538312708, 4, 0, 537526277, 65530, 0, 536870917, 65532, 0, 538312708, 65534, 0, 538312708, 262144, 0, 538050583, 262146, 0, 538050583, 262148, 0, 538050583, 327674, 0, 538050583, 327676, 0, 538050583, 327678, 0, 538050583, 5, 1, 538312741, 6, 1, 538312746, 65528, 1, 537919530, 65529, 1, 537919525, 0, 2, 538312708, 2, 2, 538312708, 4, 2, 537526277, 65530, 2, 536870917, 65532, 2, 538312708, 65534, 2, 538312708, 262144, 2, 538050583, 262146, 2, 538050583, 262148, 2, 538050583, 327674, 2, 538050583, 327676, 2, 538050583, 327678, 2, 538050583, 5, 3, 537919521, 65529, 3, 537919521, 0, 4, 538312708, 2, 4, 538312708, 4, 4, 537526277, 65530, 4, 536870917, 65532, 4, 538312708, 65534, 4, 538312708, 262144, 4, 538050585, 262146, 4, 538050585, 262148, 4, 538181657, 327674, 4, 538181657, 327676, 4, 538050585, 327678, 4, 538050585, 5, 5, 538312711, 65529, 5, 537919495, 0, 6, 537919493, 2, 6, 537919493, 4, 6, 537526274, 65530, 6, 537919490, 65532, 6, 537919493, 65534, 6, 537919493, 262144, 6, 538181657, 262146, 6, 538181657, 262148, 6, 538181657, 327674, 6, 538181657, 327676, 6, 538181657, 327678, 6, 538181657, 1, 7, 537919521, 3, 7, 537526279, 5, 7, 537919519, 65529, 7, 537919519, 65531, 7, 537526279, 65533, 7, 537919521, 65535, 7, 537526309, 65535, 8, 537526314, 3, 65531, 536870919, 5, 65531, 537919519, 65529, 65531, 537919519, 65531, 65531, 536870919, 65535, 65531, 536870919, 0, 65532, 538312709, 2, 65532, 538312709, 4, 65532, 538312706, 65530, 65532, 536870914, 65532, 65532, 538312709, 65534, 65532, 538312709, 262144, 65532, 538181657, 262146, 65532, 538181657, 262148, 65532, 538181657, 327674, 65532, 538181657, 327676, 65532, 538181657, 327678, 65532, 538181657, 5, 65533, 538312711, 65529, 65533, 537919495, 0, 65534, 538312708, 2, 65534, 538312708, 4, 65534, 537526277, 65530, 65534, 536870917, 65532, 65534, 538312708, 65534, 65534, 538312708, 262144, 65534, 538050585, 262146, 65534, 538050585, 262148, 65534, 538181657, 327674, 65534, 538181657, 327676, 65534, 538050585, 327678, 65534, 538050585, 5, 65535, 537919521, 65529, 65535, 537919521 )
}

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 2.5, 1.5 )
extents = Vector3( 7.5, 3, 7.5 )
quality = 0
use_hdr = false
use_color = false
capture_quality = 0
light_data = ExtResource( 6 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 3.5, 3.5 )
omni_range = 10.0

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 3.5, -0.5 )
omni_range = 10.0

[node name="Servers" type="Spatial" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="server2" parent="Servers" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5, 0.5, -3 )

[node name="server3" parent="Servers" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4, 0.5, -3 )

[node name="server4" parent="Servers" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3, 0.5, -3 )

[node name="server5" parent="Servers" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2, 0.5, -3 )

[node name="server7" parent="Servers" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5, 0.5, -3 )

[node name="server8" parent="Servers" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4, 0.5, -3 )

[node name="server9" parent="Servers" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 0.5, -3 )

[node name="server10" parent="Servers" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 0.5, -3 )

[node name="Servers2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.5 )
__meta__ = {
"_edit_group_": true
}

[node name="server2" parent="Servers2" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5, 0.5, -3 )

[node name="server3" parent="Servers2" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4, 0.5, -3 )

[node name="server4" parent="Servers2" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3, 0.5, -3 )

[node name="server5" parent="Servers2" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2, 0.5, -3 )

[node name="server7" parent="Servers2" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5, 0.5, -3 )

[node name="server8" parent="Servers2" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4, 0.5, -3 )

[node name="server9" parent="Servers2" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 0.5, -3 )

[node name="server10" parent="Servers2" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 0.5, -3 )

[node name="Servers3" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0, -0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="server2" parent="Servers3" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5, 0.5, -3 )

[node name="server3" parent="Servers3" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4, 0.5, -3 )

[node name="server4" parent="Servers3" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3, 0.5, -3 )

[node name="server5" parent="Servers3" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2, 0.5, -3 )

[node name="server7" parent="Servers3" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5, 0.5, -3 )

[node name="server8" parent="Servers3" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4, 0.5, -3 )

[node name="server9" parent="Servers3" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 0.5, -3 )

[node name="server10" parent="Servers3" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 0.5, -3 )

[node name="Servers4" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1, 0, 2.5 )
__meta__ = {
"_edit_group_": true
}

[node name="server2" parent="Servers4" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -5, 0.5, -3 )

[node name="server3" parent="Servers4" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4, 0.5, -3 )

[node name="server4" parent="Servers4" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3, 0.5, -3 )

[node name="server5" parent="Servers4" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2, 0.5, -3 )

[node name="server7" parent="Servers4" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 5, 0.5, -3 )

[node name="server8" parent="Servers4" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4, 0.5, -3 )

[node name="server9" parent="Servers4" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 0.5, -3 )

[node name="server10" parent="Servers4" instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 0.5, -3 )

[connection signal="connected" from="CentralSystem" to="." method="_on_CentralSystem_connected"]
[connection signal="started_coding" from="Computer" to="." method="_on_Computer_started_coding"]
